0.0440 2019-08-05
  - Rename SPVM::Data to SPVM::BlessedObject
  - Rename SPVM::Data::Array to SPVM::BlessedObject::Array
  - Rename SPVM::Data::Package to SPVM::BlessedObject::Package
  - remove SPVM::Util->split 3rd argument
0.0439 2019-08-05
  - rename runtime_type to runtime_type_category
  - fix IO::Socket connect with IP address bug
  - cleanup SPVM::MIME::Base64 interface
      package SPVM::MIME::Base64 {
        sub new : SPVM::MIME::Base64 () {
          return new SPVM::MIME::Base64;
        }
        
        native sub encode : string ($self : self, $string : string);
        native sub decode : string ($self : self, $string : string);
      }
  - refactoring SPVM::StringBuffer
  - rename SPVM::IO::Socket to SPVM::IO::ClientSocketTCP
0.0438 2019-06-22
  - add SPVM::CORE::isdigit function
  - add SPVM::CORE::ispspace function
  - add SPVM::CORE::ispword function
  - fix while condition my memmory id wrong bug
  - fix "aaa\\" can't parsing bug
  - allow "aaa$" in string literal
  - support variable expansion field access, array constant index access, dereference, exception variable, package variable
  - \r\n is converted to \n in source code parsing
  - \r is converted to \n in source code parsing
  - support private enum
      private enum {
        ONE,
        TOW
      }
  - fix multi line string literal line number bug
0.0437 2019-06-10
  - rename SPVM::List->new_with_array to newa
  - rename SPVM::Hash->new_with_array to newa
  - rename SPVM::ByteList->new_with_array to newa
  - rename SPVM::ShortList->new_with_array to newa
  - rename SPVM::IntList->new_with_array to newa
  - rename SPVM::LongList->new_with_array to newa
  - rename SPVM::FloatList->new_with_array to newa
  - rename SPVM::DoubleList->new_with_array to newa
  - remove SPVM::Hash->new_with_capacity
  - add SPVM::Hash->new_opt
  - add SPVM::Util;
  - move SPVM::CORE::joino to SPVM::Util
  - move SPVM::CORE::split to SPVM::Util
  - add SPVM::Sort;