@@ -64,13 +64,13 @@ package TestCase::Lib::SPVM::Time {
     return 1;
   }
 
-  sub test_mktime : int () {
+  sub test_timelocal : int () {
     {
       my $time = SPVM::Time->time();
       
       my $time_info = SPVM::Time->localtime($time);
       
-      my $time_ret = SPVM::Time->mktime($time_info);
+      my $time_ret = SPVM::Time->timelocal($time_info);
       
       unless ($time_ret isa long) {
         return 0;
