@@ -3,6 +3,7 @@
   - Rename SPVM::Data::Array to SPVM::BlessedObject::Array
   - Rename SPVM::Data::Package to SPVM::BlessedObject::Package
   - remove SPVM::Util->split 3rd argument
+  - rename SPVM::Time->mktime to SPVM::Time->timelocal
 0.0439 2019-08-05
   - rename runtime_type to runtime_type_category
   - fix IO::Socket connect with IP address bug
